Fix noise not covering divs past 100vh/vw

--- a/css/styles.css
+++ b/css/styles.css
@@ -191,8 +191,8 @@ body, html{
 	float: right;
     left: 0;
 	top: 0;
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 	pointer-events: none;
 }
 
